// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdminLayout tests Should render children if presented Node 1`] = `
<div>
  <div
    class="ant-row"
  >
    <span
      data-testid="test"
    >
      Text 
      <span>
        Another test
      </span>
    </span>
  </div>
</div>
`;

exports[`AdminLayout tests Should render children if presented Text 1`] = `
<div>
  <div
    class="ant-row"
  >
    Test
  </div>
</div>
`;

exports[`AdminLayout tests Should render null if no children presented 1`] = `
<div>
  <div
    class="ant-row"
  />
</div>
`;
